# libmddl

./: .gitignore  Makefile.am  configure.ac  libmddl.pc.in
src/: Makefile.am  mddl-3.0-beta-lite.xsd  mddl-attr.gperf  mddl-cmd-code.c  mddl-cmd-merge.c  mddl-cmd-name.c  mddl-cmd-objective.c  mddl-cmd-parse.c  mddl-cmd-print.c  mddl-code-opt.ggo  mddl-code.c  mddl-core.c  mddl-core.h  mddl-print.c  mddl-tag.gperf  mddl.c  mddl.h
test/: Makefile.am  merge.1.mt  merge.2.mt  merge.3.mt  merge.4.mt  merge.5.mt  merge.6.mt  merge.7.mt  merge.a.mddl  merge.b.mddl  merge.c.mddl  merge.d.mddl  merge.e.mddl  mt-test.sh
xsl/: Makefile.am  autofuns-lite.xsl  autogperf-attr.xsl  autogperf-tag.xsl  autoparse.xsl  autoprint.xsl  autospec-common.xsl  autospec-deno.xsl  autospec-lite.xsl  autospec.xsl  spec-to-struct.xsl
